tests/ui/feature-gates/feature-gate-on-broken-pipe.stderr
error[E0658]: use of unstable library feature `on_broken_pipe`
  --> $DIR/feature-gate-on-broken-pipe.rs:3:13
   |
LL |     let _ = std::io::OnBrokenPipe::BackwardsCompatible;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #150588 <https://github.com/rust-lang/rust/issues/150588> for more information
   = help: add `#![feature(on_broken_pipe)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `on_broken_pipe`
  --> $DIR/feature-gate-on-broken-pipe.rs:4:13
   |
LL |     let _ = std::io::OnBrokenPipe::Kill;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #150588 <https://github.com/rust-lang/rust/issues/150588> for more information
   = help: add `#![feature(on_broken_pipe)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `on_broken_pipe`
  --> $DIR/feature-gate-on-broken-pipe.rs:5:13
   |
LL |     let _ = std::io::OnBrokenPipe::Error;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #150588 <https://github.com/rust-lang/rust/issues/150588> for more information
   = help: add `#![feature(on_broken_pipe)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `on_broken_pipe`
  --> $DIR/feature-gate-on-broken-pipe.rs:6:13
   |
LL |     let _ = std::io::OnBrokenPipe::Inherit;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #150588 <https://github.com/rust-lang/rust/issues/150588> for more information
   = help: add `#![feature(on_broken_pipe)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `on_broken_pipe`
  --> $DIR/feature-gate-on-broken-pipe.rs:7:13
   |
LL |     let _ = std::io::on_broken_pipe();
   |             ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #150588 <https://github.com/rust-lang/rust/issues/150588> for more information
   = help: add `#![feature(on_broken_pipe)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
